crates/registry/tests/compile_fail/below_component.stderr
error: #[post_component] v1 supports props of type String, f64, i64, bool, or Option of one of these, plus `children: Children`
       = help: #[post_component] must sit above #[component] or #[island] (no such attribute was found below it)
 --> tests/compile_fail/below_component.rs:6:1
  |
6 | #[component]
  | ^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `component` (in Nightly builds, run with -Z macro-backtrace for more info)
